log/build_2025-01-10_14-16-57/mypkg/stdout_stderr.log
running egg_info
writing build/mypkg/mypkg.egg-info/PKG-INFO
writing dependency_links to build/mypkg/mypkg.egg-info/dependency_links.txt
writing entry points to build/mypkg/mypkg.egg-info/entry_points.txt
writing requirements to build/mypkg/mypkg.egg-info/requires.txt
writing top-level names to build/mypkg/mypkg.egg-info/top_level.txt
reading manifest file 'build/mypkg/mypkg.egg-info/SOURCES.txt'
writing manifest file 'build/mypkg/mypkg.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/shibata/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/cpu_usage.listener.py to cpu_usage.listener.cpython-38.pyc
  File "/home/shibata/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/cpu_usage.listener.py", line 20
    ~
    ^
SyntaxError: invalid syntax

running install_data
copying package.xml -> /home/shibata/ros2_ws/src/mypkg/install/mypkg/share/mypkg
running install_egg_info
removing '/home/shibata/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying build/mypkg/mypkg.egg-info to /home/shibata/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg-0.0.0-py3.8.egg-info
running install_scripts
Installing cpu_usage script to /home/shibata/ros2_ws/src/mypkg/install/mypkg/lib/mypkg
Installing cpu_usage.listener script to /home/shibata/ros2_ws/src/mypkg/install/mypkg/lib/mypkg
writing list of installed files to '/home/shibata/ros2_ws/src/mypkg/build/mypkg/install.log'
